Fix card alignment in marketplace #60

--- a/frontend/src/app/components/header/header.component.sass
+++ b/frontend/src/app/components/header/header.component.sass
@@ -132,7 +132,8 @@
 
       #wrapper-1
         flex-wrap: wrap
-        justify-content: center
+        justify-content: flex-start
+        align-items: flex-end
         margin: 0
         padding: 0
         padding-right: 1em
